--- a/src/app/dashboard/notifications/notifications.component.html
+++ b/src/app/dashboard/notifications/notifications.component.html
@@ -101,7 +101,7 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header" data-background-color="red">
-                    Service Tracker
+                    <h4 class="title">Service Tracker</h4>
                 </div>
                 <div class="card-content">
                     <div class="row">
