--- a/src/app/dashboard/user/user-management/user-management.component.html
+++ b/src/app/dashboard/user/user-management/user-management.component.html
@@ -1,305 +1,52 @@
-
 <!--User Management-->
 <div class="main-content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header" data-background-color="red">
-                        <h4 class="title">Users</h4>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header" data-background-color="red">
+                    <h4 class="title">Users</h4>
+                </div>
+                <div class="card-content table-responsive">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <label><b>Distributor : Dist-001</b></label>
+                        </div>
                     </div>
-                    <div class="col-md-12">
-                        <p class="category" style="margin-top:15px;margin-left: 15px;"><b>Distributor: Dist-001</b></p>
-                    </div>
-                    <div class="col-md-12">
+                    <div class="row">
                         <div class="col-md-10">
                             <input type="text" class="form-control" id="exampleInputName3" placeholder="Search" style="margin-top:15px;">
                         </div>
                         <div class="col-md-2">
-                            <a href="#pablo" class="btn btn-danger btn-round"  [routerLink]="['addUser']">Create user</a>
+                            <a href="#pablo" class="btn btn-danger btn-round" [routerLink]="['add-user']">Create user</a>
                         </div>
                     </div>
-                    <div class="card-content table-responsive">
-                        <table class="table">
-                            <thead class="text-danger">
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Route ID</th>
-                                    <th>User Name</th>
-                                    <th>Role</th>
-                                    <th>Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let user of users">
-                                    <td>{{user.id}}</td>
-                                    <td>{{user.Route_id}}</td>
-                                    <td>{{user.Username}}</td>
-                                    <td>{{user.Role}}</td>
-                                    <td>
-                                        <span class="glyphicon glyphicon-edit"></span>
-                                        <span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <table class="table">
+                        <thead class="text-danger">
+                            <tr>
+                                <th>ID</th>
+                                <th>Route ID</th>
+                                <th>User Name</th>
+                                <th>Role</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let user of users">
+                                <td>{{user.id}}</td>
+                                <td>{{user.Route_id}}</td>
+                                <td>{{user.Username}}</td>
+                                <td>{{user.Role}}</td>
+                                <td>
+                                    <span class="glyphicon glyphicon-edit"></span>
+                                    <span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
 
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!--User Management-->
-
-
-
-
-
-
-
-
-
-
-
- <!--@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ User Management-->
-    
-<!--<div class="main-content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="col-md-12" style="margin-top:10px;">
-                        <div class="col-md-10" style="padding-left:0px;margin-top:8px;">
-                            <p class="category" style="margin-top:15px;margin-left: 20px;"><b>Create User</b></p>
-                        </div>
-                        <div class="col-md-2">
-                            <button class="btn btn-danger btn-round" onclick="demo.showNotification('top','right')">Save</button>
-                        </div>
-                    </div>
-                    <div class="card-content table-responsive">
-                        <div class="col-md-12">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group form-black label-floating is-empty">
-                                        <span class="col-md-3">
-                                            <label class="control-label">First Name</label>
-                                        </span>
-                                        <span class="col-md-9">
-                                            <input type="text" class="form-control">
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group form-black label-floating is-empty">
-                                        <span class="col-md-3">
-                                            <label class="control-label">Last Name</label>
-                                        </span>
-                                        <span class="col-md-9">
-                                            <input type="text" class="form-control">
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group form-black label-floating is-empty">
-                                        <span class="col-md-3">
-                                            <label class="control-label">Phone</label>
-                                        </span>
-                                        <span class="col-md-9">
-                                            <input type="text" class="form-control">
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group form-black label-floating is-empty">
-                                        <span class="col-md-3">
-                                            <label class="control-label">Email</label>
-                                        </span>
-                                        <span class="col-md-9">
-                                            <input type="text" class="form-control">
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12" style="margin-top:20px;padding-left:0px;padding-right:0px">
-                            <div class="col-md-10">
-                                <p class="category" style="margin-top:15px;margin-left: 1px;"><b>List of mapped Location/branch</b></p>
-                            </div>
-                            <div class="col-md-2">
-                                <button class="btn btn-danger btn-round" onclick="demo.showNotification('top','right')">ADD Location</button>
-                            </div>
-                        </div>
-                        <div class="card-content table-responsive">
-                            <table class="table">
-                                <thead class="text-danger">
-                                    <tr>
-                                        <th>Location</th>
-                                        <th>Branch</th>
-                                        <th>Action</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>311</td>
-                                        <td>311</td>
-                                        <td>
-                                            <span class="glyphicon glyphicon-edit" style="font-size:20px;"></span>
-                                            <span class="glyphicon glyphicon-trash" style="font-size:20px;margin-left:20px;"></span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>322</td>
-                                        <td>322</td>
-                                        <td>
-                                            <span class="glyphicon glyphicon-edit" style="font-size:20px;"></span>
-                                            <span class="glyphicon glyphicon-trash" style="font-size:20px;margin-left:20px;"></span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>333</td>
-                                        <td>333</td>
-                                        <td>
-                                            <span class="glyphicon glyphicon-edit" style="font-size:20px;"></span>
-                                            <span class="glyphicon glyphicon-trash" style="font-size:20px;margin-left:20px;"></span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>334</td>
-                                        <td>334</td>
-                                        <td>
-                                            <span class="glyphicon glyphicon-edit" style="font-size:20px;"></span>
-                                            <span class="glyphicon glyphicon-trash" style="font-size:20px;margin-left:20px;"></span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>335</td>
-                                        <td>335</td>
-                                        <td>
-                                            <span class="glyphicon glyphicon-edit" style="font-size:20px;"></span>
-                                            <span class="glyphicon glyphicon-trash" style="font-size:20px;margin-left:20px;"></span>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-*******************************************************User Management-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--@@@@@@@@@ Customer Management
-    <div class="main-content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="col-md-12" style="margin-top:10px;">
-                        <div class="col-md-10" style="padding-left:0px;margin-top:8px;">
-                            <p class="category" style="margin-top:15px;margin-left: 11px;"><b>Create User</b></p>
-                        </div>
-                        <div class="col-md-2">
-                            <button class="btn btn-danger btn-round" onclick="demo.showNotification('top','right')">Save</button>
-                        </div>
-                    </div>
-
-                    <div class="card-content table-responsive">
-                        <table class="table">
-                            <thead class="text-danger">
-                                <tr>
-                                    <th>SN</th>
-                                    <th>Product</th>
-                                    <th>Price</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>CockTail-10</td>
-                                    <td>
-                                        <div class="input-group">
-                                            <div class="input-group-addon" style="padding-left:0px;padding-right:12px;">$</div>
-                                            <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount" style="border:1px solid #ddd;background-image:none;">
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>CockTail-20</td>
-                                    <td>
-                                        <div class="input-group">
-                                            <div class="input-group-addon" style="padding-left:0px;padding-right:12px;">$</div>
-                                            <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount" style="border:1px solid #ddd;background-image:none;">
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>CockTail-30</td>
-                                    <td>
-                                        <div class="input-group">
-                                            <div class="input-group-addon" style="padding-left:0px;padding-right:12px;">$</div>
-                                            <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount" style="border:1px solid #ddd;background-image:none;">
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>CockTail-40</td>
-                                    <td>
-                                        <div class="input-group">
-                                            <div class="input-group-addon" style="padding-left:0px;padding-right:12px;">$</div>
-                                            <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount" style="border:1px solid #ddd;background-image:none;">
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>5</td>
-                                    <td>CockTail-50</td>
-                                    <td>
-                                        <div class="input-group">
-                                            <div class="input-group-addon" style="padding-left:0px;padding-right:12px;">$</div>
-                                            <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount" style="border:1px solid #ddd;background-image:none;">
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>@@@@@@@Customer Management-->
-
-
-
-
-
-
-
-
-
-
-   
