--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>-->
         <p>
-            &copy; Please note that while you are reviewing any information on this portal, the information is posted as of the dates listed. Reddy Ice has no obligation to update the information in the email alerts or otherwise from this website, which speak as
+            &copy; Please note that while you are reviewing any information on this portal, the information is posted as of the dates listed. Reddy Ice has no obligation to update the information in the email alerts or otherwise from this portal, which speak as
             of their respective dates.
         </p>
     </div>
