--- a/src/app/dashboard/customer/customer-details/customer-detail.component.html
+++ b/src/app/dashboard/customer/customer-details/customer-detail.component.html
@@ -3,16 +3,16 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header" data-background-color="red">
-                    <h4 class="title">Add New Customer</h4>
+                    <h4 class="title">{{title}}</h4>
                 </div>
                 <div class="card-content">
                     <div class="row">
                         <div class="col-md-12">
                         <!-- <div style="margin: 20px 0px;display: inline-block;font-size: 18px;">Add New Customer</div> -->
-                            <a [routerLink]="['../']" class="btn btn-danger btn-round" style="float:right;">Save</a>
+                            <a [routerLink]="selectedId ? ['../../'] : ['../']" class="btn btn-danger btn-round" style="float:right;">Save</a>
                         </div>
                     </div>
-                    <form>
+                    <form novalidate #f="ngForm" (ngSubmit)="onSubmit(f)">
                         <div class="row">
                             <div class="col-md-3">
                                 <div class="form-group form-black label-floating is-empty" style="margin-left: 78px;">
@@ -21,7 +21,7 @@
                             </div>
                             <div class="col-md-3">
                                 <div class="form-group form-black label-floating is-empty">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="customerName" [(ngModel)]="customer.customerName" #userName="ngModel" [readonly]="isReadOnly" required>
                                 </div>
                             </div>
                             <div class="col-md-2">
@@ -47,7 +47,7 @@
                             </div>
                             <div class="col-md-3">
                                 <div class="form-group form-black label-floating is-empty">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="customerId" [(ngModel)]="customer.customerId" #customerName="ngModel" [readonly]="isReadOnly" required>
                                 </div>
                             </div>
                             <div class="col-md-2">
@@ -89,7 +89,7 @@
                             </div>
                             <div class="col-md-9">
                                 <div class="form-group form-black label-floating is-empty" style="margin-right: 78px;">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="address" [(ngModel)]="customer.address" #customerAddress="ngModel" [readonly]="isReadOnly" required>
                                 </div>
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                             </div>
                             <div class="col-md-2">
                                 <div class="form-group form-black label-floating is-empty">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="city" [(ngModel)]="customer.city" #customerCity="ngModel" [readonly]="isReadOnly" required>
                                 </div>
                             </div>
                             <div class="col-md-2">
@@ -111,7 +111,7 @@
                             </div>
                             <div class="col-md-2">
                                 <div class="form-group form-black label-floating is-empty">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="state" [(ngModel)]="customer.state" #customerState="ngModel" [readonly]="isReadOnly" required>
                                 </div>
                             </div>
                             <div class="col-md-1">
@@ -121,7 +121,7 @@
                             </div>
                             <div class="col-md-3">
                                 <div class="form-group form-black label-floating is-empty" style="margin-right: 78px;">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="zip" [(ngModel)]="customer.zip" #customerZip="ngModel" [readonly]="isReadOnly" required>
                                 </div>
                             </div>
                         </div>
@@ -133,17 +133,17 @@
                             </div>
                             <div class="col-md-3">
                                 <div class="form-group form-black label-floating is-empty">
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="phone" [(ngModel)]="customer.phone" #customerPhone="ngModel" [readonly]="isReadOnly" required>
                                 </div>
                             </div>
                             <div class="col-md-2">
                                 <div class="form-group form-black label-floating is-empty" style="margin-left: 78px;">
-                                    <label class="control-label">Location</label>
+                                    <label class="control-label">Email</label>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group form-black label-floating is-empty" style="margin-right: 78px;">
-                                    <input type="text" class="form-control">
+                                    <input type="email" class="form-control" name="email" [(ngModel)]="customer.email" #customerEmail="ngModel" [readonly]="isReadOnly" required>
                                 </div>
                             </div>
                         </div>
