--- a/src/app/dashboard/customer/customer-details/customer-detail.component.html
+++ b/src/app/dashboard/customer/customer-details/customer-detail.component.html
@@ -9,7 +9,8 @@
                     <div class="row">
                         <div class="col-md-12">
                         <!-- <div style="margin: 20px 0px;display: inline-block;font-size: 18px;">Add New Customer</div> -->
-                            <a [routerLink]="selectedId ? ['../../'] : ['../']" class="btn btn-danger btn-round" style="float:right;">Save</a>
+                            <a *ngIf="isReadOnly" class="btn btn-danger btn-round" style="float:right;" (click)="onEdit()">Edit</a>
+                            <a *ngIf="!isReadOnly" [routerLink]="selectedId ? ['../../'] : ['../']" class="btn btn-danger btn-round" style="float:right;">Save</a>
                         </div>
                     </div>
                     <form novalidate #f="ngForm" (ngSubmit)="onSubmit(f)">
