manual ticket home page

--- a/src/app/dashboard/customer/customer-management/customer-management.component.html
+++ b/src/app/dashboard/customer/customer-management/customer-management.component.html
@@ -8,9 +8,9 @@
                 <div class="card-content">
                     <div>
                         <div class="customerDetailCollapsed">
-                            <h4>Distributor : Dist-001</h4>
+                            <label><b>Distributor : Dist-001</b></label>
                             <div class="buttonStyle">
-                                <div style="">
+                                <div>
                                     <a href="#pablo" class="btn btn-danger btn-round">Set Generic Price</a>
                                 </div>
                                 <div style="margin-left:25px;">
