--- a/src/app/dashboard/reconciliation/reconciliation-cash/reconciliation-cash.component.html
+++ b/src/app/dashboard/reconciliation/reconciliation-cash/reconciliation-cash.component.html
@@ -6,7 +6,7 @@
                     <h4 class="title">Reconciliation</h4>
                 </div>
                 <div class="card-content">
-                    <div class="col-md-12">
+                    <div class="row">
                         <div class="col-md-4">
                             <div class="form-group form-black label-floating is-empty">
                                 <label style="margin-left: 30px;">Route:</label>
