--- a/src/app/dashboard/reconciliation/reconciliation/reconciliation.component.html
+++ b/src/app/dashboard/reconciliation/reconciliation/reconciliation.component.html
@@ -5,21 +5,19 @@
                 <div class="card-header" data-background-color="red">
                     <h4 class="title">Reconciliation</h4>
                 </div>
-                <div class="col-md-12">
-                    <div class="col-md-5">
-                        <div class="" style="margin-right: 78px;margin-top: 25px;">
+                <div class="card-content">
+                    <div class="row">
+                    <div class="col-md-5" style="margin-top: 25px;">
                             <select class="form-control">
                                 <option value="volvo">301/301</option>
                                 <option value="saab">302/302</option>
                                 <option value="opel">303/303</option>
                             </select>
                         </div>
-                    </div>
                     <div class="col-md-7">
-                         <input type="text" class="form-control" id="exampleInputName3" placeholder="Search" style="margin-top:23px;">
+                         <input type="text" class="form-control" id="exampleInputName3" placeholder="Search" style="margin-top:25px;">
                     </div>
-                </div>
-                <div class="card-content">
+                    </div>
                     <table class="table">
                             <thead class="text-danger">
                                 <tr>
