--- a/src/app/dashboard/user/user.component.html
+++ b/src/app/dashboard/user/user.component.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="col-md-10">
-                            <input type="text" class="form-control" id="exampleInputName3" placeholder="Search" style="margin-top:15px;">
+                            <input type="text" class="form-control" id="exampleInputName3" placeholder="Search" style="margin-top:15px;" [(ngModule)]="filterText" >
                         </div>
                         <div class="col-md-2">
                             <button class="btn btn-danger btn-round" onclick="demo.showNotification('top','right')">Create user</button>
