--- a/src/app/dashboard/user/user-management/user-management.component.html
+++ b/src/app/dashboard/user/user-management/user-management.component.html
@@ -21,7 +21,7 @@
                             <a href="#pablo" class="btn btn-danger btn-round" [routerLink]="['add-user']">Create user</a>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="table-responsive">
                         <table class="table">
                             <thead class="text-danger">
                                 <tr>
@@ -39,7 +39,7 @@
                                     <td>{{user.Username}}</td>
                                     <td>{{user.Role}}</td>
                                     <td>
-                                        <span class="glyphicon glyphicon-edit"></span>
+                                      <a [routerLink]="['./edit',user.id]"><span class="glyphicon glyphicon-edit"></span></a>
                                         <span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span>
                                     </td>
                                 </tr>
