--- a/src/app/dashboard/user/user.component.html
+++ b/src/app/dashboard/user/user.component.html
@@ -65,7 +65,7 @@
                                     <td>Rishabh</td>
                                     <td>Admin</td>
                                     <td>
-                                        <span class="glyphicon glyphicon-edit"></span>
+                                        <a [routerLink]="['cash']"><span class="glyphicon glyphicon-edit"></span></a>
                                         <span class="glyphicon glyphicon-trash" style="margin-left:20px;"></span>
                                     </td>
                                 </tr>
