--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-transparent navbar-absolute">
     <div class="container-fluid">
         <div class="navbar-header">
+            <div class="col-md-4 app-title" data-toggle="collapse">
+                <a class="app-heading navbar-brand">My Icebox </a>
+            </div>
             <button type="button" class="navbar-toggle" data-toggle="collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -20,10 +23,10 @@
                 </div>
                 <div class="col-md-2">
                     <select class="form-control">
-						  <option value="volvo">301/301</option>
-						  <option value="saab">302/302</option>
-						  <option value="opel">303/303</option>
-						</select>
+                      <option value="volvo">301/301</option>
+                      <option value="saab">302/302</option>
+                      <option value="opel">303/303</option>
+                    </select>
                 </div>
                 <div class="col-md-3 text-right">
                     <label class="user-name">John Hue</label>
@@ -49,7 +52,7 @@
                         <span class="notification">8</span>
                         <p class="hidden-lg hidden-md">Notifications</p>
                     </a>
-                   
+
                 </li>
                 <li>
                     <a class="dropdown-toggle" data-toggle="dropdown">
@@ -58,7 +61,7 @@
                     </a>
                 </li>
             </ul>
-            
+
         </div>-->
     </div>
 </nav>
